--- a/app/src/main/res/layout/activity_bridged.xml
+++ b/app/src/main/res/layout/activity_bridged.xml
@@ -4,53 +4,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".Tnetwork">
 
     <ImageView
         android:id="@+id/bridgedtimage"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginTop="20dp"
-        >
-    </ImageView>
+        android:layout_marginTop="20dp"></ImageView>
 
     <TextView
+        android:id="@+id/R1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/bridgedtimage"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="40dp"
         android:text="R(ohms):"
-        android:textSize="25dp"
-        android:id="@+id/R1"
-        >
+        android:textColor="@color/purple"
+        android:textSize="25dp">
 
     </TextView>
 
     <EditText
+        android:id="@+id/R1input"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/timage"
         android:layout_alignBottom="@+id/R1"
         android:layout_marginLeft="25dp"
         android:layout_toRightOf="@+id/R1"
-        android:id="@+id/R1input"
-        android:inputType="numberDecimal"
-        >
+        app:backgroundTint="@color/purple"
+        android:textColor="@color/purple"
+        android:textColorHighlight="@color/purple"
+        android:textColorHint="@color/purple"
+        android:textColorLink="@color/purple"
+        android:inputType="numberDecimal">
+
     </EditText>
 
 
-
     <TextView
+        android:id="@+id/Att"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/R1"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:text="Attenuation(dB):"
-        android:textSize="25dp"
-        android:id="@+id/Att"
-        >
+        android:textColor="@color/purple"
+
+        android:textSize="25dp">
 
     </TextView>
 
@@ -58,26 +62,30 @@
         android:id="@+id/AttInput"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/Att"
         android:layout_below="@+id/R2Input"
+        android:layout_alignBottom="@+id/Att"
         android:layout_marginLeft="20dp"
         android:layout_toRightOf="@+id/Att"
-        android:inputType="numberDecimal"
-        >
+        app:backgroundTint="@color/purple"
+        android:textColor="@color/purple"
+        android:textColorHighlight="@color/purple"
+        android:textColorHint="@color/purple"
+        android:textColorLink="@color/purple"
+        android:inputType="numberDecimal">
     </EditText>
 
     <Button
+        android:id="@+id/Calc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/Att"
-        android:text="Calculate"
-        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:id="@+id/Calc"
-        >
+        android:layout_marginTop="20dp"
+        android:background="@color/ora"
+        android:textColor="@color/colorPrimary"
+        android:text="Calculate">
 
     </Button>
-
 
 
     <TextView
@@ -85,10 +93,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/Calc"
-        android:text="Ra:"
-        android:textSize="25dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:text="Ra:"
+        android:textColor="@color/red"
+        android:textSize="25dp">
 
     </TextView>
 
@@ -97,11 +106,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/Ra"
-        android:text="Rb:"
-        android:textSize="25dp"
-
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:textColor="@color/red"
+        android:text="Rb:"
+        android:textSize="25dp">
 
     </TextView>
 
@@ -110,14 +119,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/Rb"
-        android:text="Rc:"
-        android:textSize="25dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:text="Rc:"
+        android:textColor="@color/red"
+        android:textSize="25dp">
 
     </TextView>
-
-
 
 
 </RelativeLayout>
