--- a/app/src/main/res/layout/activity_bridged.xml
+++ b/app/src/main/res/layout/activity_bridged.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     tools:context=".Tnetwork">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="5dp"
+    >
 
     <ImageView
         android:id="@+id/bridgedtimage"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginTop="20dp"></ImageView>
+        >
+    </ImageView>
 
     <TextView
         android:id="@+id/R1"
@@ -19,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/bridgedtimage"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:text="R(ohms):"
         android:textColor="@color/purple"
         android:textSize="25dp">
@@ -129,3 +136,4 @@
 
 
 </RelativeLayout>
+</ScrollView>
