--- a/app/src/main/res/layout/activity_pi_network.xml
+++ b/app/src/main/res/layout/activity_pi_network.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     tools:context=".Tnetwork">
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        >
     <ImageView
         android:id="@+id/piimage"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginTop="20dp"></ImageView>
+        >
+    </ImageView>
 
     <TextView
         android:id="@+id/R1"
@@ -19,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/piimage"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:text="R1(ohms):"
         android:textColor="@color/purple"
         android:textSize="25dp">
@@ -157,3 +162,4 @@
 
 
 </RelativeLayout>
+</ScrollView>
